--- a/day1/server/.server/server/views/.index.html
+++ b/day1/server/.server/server/views/.index.html
@@ -3,15 +3,11 @@
   <title>DASH</title>
   <link rel="stylesheet" href="/assets/css/dash.css">
   <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css">
-  <link rel="styleSheet" href="/bower_components/angular-ui-grid/ui-grid.css"/>
 </head>
 <body>
-
 <div ng-controller="HomeCtr" class="mainPage">
   <section class="topMenu">
-    <span><a ui-sref="home" href="#">Home</a></span>
-    <span><a ui-sref="member list" href="#/memberList">List</a></span>
-    <span><a ui-sref="member grid" href="#/memberGrid">Grid</a></span>
+    <span><a ui-sref="home" href="#">Home</a><a ui-sref="member list" href="#/members">List</a></span>
   </section>
   <h1>Dallas Angular SuperHeroes</h1>
   <section class="intro">
@@ -22,17 +18,22 @@
   
   <!-- uiView:  -->
   <section ui-view="">
-'  </section>
+    <h2>This is the home page </h2>
+  </section>
 </div>
-
 <script src="/bower_components/jquery/dist/jquery.js"></script>
 <script src="/bower_components/angular/angular.js"></script>
 <script src="/bower_components/angular-resource/angular-resource.js"></script>
 <script src="/bower_components/angular-route/angular-route.js"></script>
-<script src="/bower_components/angular-ui-grid/ui-grid.js"></script>
 <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 <script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
 <script src="/bower_components/angular-bootstrap/ui-bootstrap.js"></script>
-
+<script src="/app.js"></script>
+<script src="/backend/memberBackEndIF.js"></script>
+<script src="/controllers/homeCtr.js"></script>
+<script src="/controllers/memberCtr.js"></script>
+<script src="/routes/dashRte.js"></script>
+<script src="/services/listSrv.js"></script>
+<script src="/services/memberSrv.js"></script>
 </body>
 </html>
