--- a/day1/server/.server/server/views/index.html
+++ b/day1/server/.server/server/views/index.html
@@ -22,7 +22,7 @@
   
   <!-- uiView:  -->
   <section ui-view="">
-'  </section>
+  </section>
 </div>
 
 <script src="/bower_components/jquery/dist/jquery.js"></script>
