--- a/day1/server/.server/views/index.html
+++ b/day1/server/.server/views/index.html
@@ -22,7 +22,8 @@
   
   <!-- uiView:  -->
   <section ui-view="">
-'  </section>
+    <h2>This is the home page </h2>
+  </section>
 </div>
 
 <script src="/bower_components/jquery/dist/jquery.js"></script>
