--- a/public/views/memberList.html
+++ b/public/views/memberList.html
@@ -1,6 +1,6 @@
 <div ng-controller="MemberCtr" ng-init="initMemberList()" class="listPage">
 
-    <h1>Members </h1>
+    <h1>Members ({{members.length}})</h1>
 
     <ul class="objList" ng-repeat="member in members">
         <li>
