--- a/public/views/memberList.html
+++ b/public/views/memberList.html
@@ -1,4 +1,4 @@
-<div ng-controller="MemberCtr" ng-init="initMemberList()" class="listPage">
+<div ng-controller="MemberCtr"  class="listPage">
 
     <h1>Members ({{members.length}})</h1>
 
