--- a/server/views/index.html
+++ b/server/views/index.html
@@ -9,7 +9,7 @@
 
 <div ng-controller="HomeCtr" class="mainPage">
   <section class="topMenu">
-    <span><a ui-sref="home" href="#">Home</a></span>
+    <span><a ui-sref="home" href="#/">Home</a></span>
     <span><a ui-sref="member list" href="#/memberList">List</a></span>
     <span><a ui-sref="member grid" href="#/memberGrid">Grid</a></span>
   </section>
@@ -22,7 +22,7 @@
   
   <!-- uiView:  -->
   <section ui-view="">
-'  </section>
+  </section>
 </div>
 
 <script src="/bower_components/jquery/dist/jquery.js"></script>
