Add a toggle button to show details

--- a/public/views/lost.html
+++ b/public/views/lost.html
@@ -1,3 +1,5 @@
-
-    <h2 class="error">URL not recognized</h2>
-
+<h2 class="error">URL not recognized</h2>
+<ul>
+  <li>state.params {{state.params}}</li>
+  <li>state.current {{state.current}}</li>
+</ul>
